--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,22 @@ license = "Apache-2.0"
 authors = ["Astro <astro@spaceboyz.net>"]
 version = "0.0.0"
 keywords = ["ethernet", "eth", "stm32", "stm32f4", "stm32f7"]
-travis-ci = { repository = "astro/stm32-eth", branch = "master" }
-maintenance = { status = "experimental" }
 
 [dependencies]
-cortex-m-semihosting = "0.3"
+#cortex-m-semihosting = "0.3"
 volatile-register = "0.2.0"
 aligned = "0.1.1"
 bare-metal = { version = "0.1.2", optional = true }
 
 stm32f429 = { git = "https://github.com/birkenfeld/stm32f429.git", branch = "master", features = ["rt"], optional = true }
 
-smoltcp = { git = "https://github.com/m-labs/smoltcp.git", rev = "216c393", default-features = false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
-#smoltcp = { path = "smoltcp", default-features = false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
+#smoltcp = { git = "https://github.com/m-labs/smoltcp.git", rev = "216c393", default-features = false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
+smoltcp = { path = "../smoltcp", default-features = false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
 log = { version = "0.4.1", optional = true }
 
 [features]
 smoltcp-phy = ["smoltcp", "log"]
-default = []
+default = ["smoltcp-phy", "target-stm32f429"]
 
 # Targets
 target-stm32f429 = ["stm32f429"]
@@ -31,7 +29,8 @@ target-stm32f429 = ["stm32f429"]
 [dev-dependencies]
 cortex-m = { version = "0.5", features = ["const-fn"] }
 cortex-m-rt = { version = "0.5.0", features = [] }
-panic-semihosting = "0.2.0"
+#panic-semihosting = "0.2.0"
+panic-itm = "0.2"
 
 [[example]]
 name = "pktgen"
