--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,48 +1,22 @@
 [package]
-categories = ["embedded", "no-std", "hardware-support", "network-programming"]
 name = "stm32-eth"
-description = "Embedded Rust Ethernet driver for the STM32 MCU series"
+description = "Rust Ethernet driver for the STM32F429 with applications"
+authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
+version = "0.1.0"
 license = "Apache-2.0"
-authors = ["Astro <astro@spaceboyz.net>"]
-version = "0.0.0"
-keywords = ["ethernet", "eth", "stm32", "stm32f4", "stm32f7"]
 
 [dependencies]
-#cortex-m-semihosting = "0.3"
-volatile-register = "0.2.0"
+log = "0.4.1"
 aligned = "0.1.1"
-bare-metal = { version = "0.1.2", optional = true }
-
-stm32f429 = { git = "https://github.com/birkenfeld/stm32f429.git", branch = "master", features = ["rt"], optional = true }
-
-#smoltcp = { git = "https://github.com/m-labs/smoltcp.git", rev = "216c393", default-features = false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
-smoltcp = { path = "../smoltcp", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"], optional = true }
-log = { version = "0.4.1", optional = true }
-
-[features]
-smoltcp-phy = ["smoltcp", "log"]
-default = ["smoltcp-phy", "target-stm32f429"]
-
-# Targets
-target-stm32f429 = ["stm32f429"]
-
-[dev-dependencies]
-cortex-m = { version = "0.5", features = ["const-fn"] }
-cortex-m-rt = { version = "0.5.0", features = [] }
-#panic-semihosting = "0.2.0"
 panic-itm = "0.2"
+cortex-m-rt = "0.5.0"
+cortex-m = { version = "0.5", features = ["const-fn"] }
+volatile-register = "0.2.0"
+stm32f429 = { git = "https://github.com/birkenfeld/stm32f429.git", features = ["rt"] }
+smoltcp = { git = "https://github.com/birkenfeld/smoltcp", default-features = false, features = ["proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose"] }
 
-[[example]]
-name = "pktgen"
-required-features = ["target-stm32f429"]
-
-[[example]]
-name = "udp"
-required-features = ["target-stm32f429", "smoltcp-phy"]
-
-[[example]]
-name = "ip"
-required-features = ["target-stm32f429", "smoltcp-phy"]
+[[bin]]
+name = "seqgen"
 
 [profile.release]
 debug = 2
